# Carbon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: allocator.hpp.842864D8E4BFC95D.idx  archetype.hpp.2A480009B96719C3.idx  archetype.hpp.45B290D463AE852A.idx  archetype.hpp.D7ED9DAA0AF3BACE.idx  assert.hpp.618E6A295B876DF4.idx  build.hpp.158A77AC1ABAD2E5.idx  build.hpp.5F636C8E086AB80B.idx  command_buffer.hpp.C03C11A45B995212.idx  component.hpp.756C3DB619CFFEAB.idx  core.hpp.0695C3EBE7CA5516.idx  core.hpp.918682E3EDD15F9B.idx  entity.hpp.5EEC66E98F310C80.idx  flat_hash_map.hpp.E510549EF0007484.idx  flat_hash_map.hpp.E9FAE8F82A75B148.idx  job.hpp.E851DD3D90427877.idx  log.hpp.DA4894866AC3B42D.idx  main.cpp.09C31F6C137D0C7B.idx  page_block.hpp.3ADCAEAE097BF266.idx  pageblock.hpp.8EEE9ECA092D942A.idx  pageblock_core.hpp.75967E2B2C51F72E.idx  query.hpp.3B3D8F10148770A6.idx  scheduler.hpp.31C2A9C90F4BFF03.idx  system.hpp.B9C0D08FE28E2932.idx  system.hpp.CF8C35E61F7D4152.idx  thread_pool.hpp.48C14D987ACCD65C.idx  topology.hpp.861A24A1B1128ABA.idx  type_id.hpp.225EE34A8A2F9CFD.idx  type_id.hpp.89AE486DA9902321.idx  type_list.hpp.3D1A0EB3090B25D3.idx  type_list.hpp.BCF24A4F85BCE5FD.idx
benchmarks/wasm/: benchmark.js  benchmark.wasm  index.html  st_mass_spawn.cpp
docs/: Doxyfile  package-lock.json  package.json  wrangler.jsonc
docs/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
include/: archetype.hpp  build.hpp  log.hpp  query.hpp  thread_pool.hpp
include/api/: core.hpp  system.hpp
include/ecs/: archetype.hpp  command_buffer.hpp  component.hpp  core.hpp  entity_constructor.hpp  system.hpp
include/meta/: type_id.hpp  type_list.hpp
include/platform/: pageblock.hpp
include/scheduler/: job.hpp
include/world/: allocator.hpp  entity.hpp
src/: main.cpp
